discovery-frontend/src/assets/css/metatron/component/component.table.css
/* ... */
table.ddp-table-type3.ddp-cursor-none tbody tr td {cursor: default;}
table.ddp-table-type3 tbody tr td {position:relative; padding:10px 10px 11px 10px; font-size:13px; border:none; border-bottom:1px solid #ddd; background-color:#fff; cursor: pointer; cursor:pointer; overflow:inherit; white-space:normal;}

table.ddp-table-type3 tbody tr td:first-of-type {padding-left:20px; border-left:1px solid #ddd;}
table.ddp-table-type3 tbody tr td:last-of-type {border-right:1px solid #ddd;}
table.ddp-table-type3 tbody tr:nth-child(odd) td {background:#fff;}
table.ddp-table-type3 tbody tr:hover td {background-color:#f6f6f7; cursor:pointer;}
table.ddp-table-type3.ddp-cursor-none tbody tr:hover td {background:#fff; cursor:default;}
table.ddp-table-type3 tbody tr td .ddp-btn-control {display:none; position:absolute; top:50%; right:10px; margin-top:-11px;}
table.ddp-table-type3 tbody tr:hover td .ddp-btn-control {display:block;}
table.ddp-table-type3 tbody tr td.ddp-hover-tooltip {display:table-cell; overflow:inherit;}

table.ddp-table-type3 tbody tr td .ddp-link {text-decoration: underline; color:#4c92e0;}

/**************************************************************
	Table select
**************************************************************/
table.ddp-table-select tbody tr td {position:relative; cursor:pointer;}
table.ddp-table-select tbody tr:hover td {background-color:#f1f1f1; cursor:pointer;}
table.ddp-table-select tbody tr.ddp-selected td {background-color:#f2f1f8;}
/*table.ddp-table-select tbody tr.ddp-selected td:before {position:absolute; top:0; left:0; right:0; bottom:0; border:1px solid Red; border-left:none; border-right:none; content:'';}*/
table.ddp-table-select tbody tr.ddp-selected td {border-top:1px solid #666eb2; border-bottom:1px solid #666eb2;;}
table.ddp-table-select tbody tr.ddp-selected td:first-of-type {border-left:1px solid #666eb2;}
table.ddp-table-select tbody tr.ddp-selected td:last-of-type {border-right:1px solid #666eb2;}
table.ddp-table-select tbody tr td .ddp-box-tag {position:relative; top:2px;}
table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td {padding:12px 10px 13px 10px}
table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td:first-of-type {padding-left:9px;}
table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td:last-of-type {padding-right:9px;}

table.ddp-table-select tr td:last-of-type {padding-right:35px;}
table.ddp-table-select tbody tr.ddp-selected td:first-child:before {border-left:1px solid #666eb2;}
table.ddp-table-select tbody tr.ddp-selected td:last-child:before {border-right:1px solid #666eb2; }
table.ddp-table-select tbody tr.ddp-selected td:last-of-type:after {display:inline-block; position:absolute; top:50%; right:10px; width:11px; height:8px; margin-top:-6px; background:url(../../../images/icon_select2.png) no-repeat; background-position:-15px top; content:'';}

table.ddp-table-select tbody tr.ddp-selected td .ddp-box-tag {position:relative; top:2px;}


/**************************************************************
	Table listview
**************************************************************/
.ddp-wrap-table-list {float:left; width:100%; padding:10px 53px 10px 83px; box-sizing:border-box;}
table.ddp-table-listview {width:100%; table-layout:fixed;}
table.ddp-table-listview tbody tr td {padding:3px 5px; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; word-wrap:normal;}
table.ddp-table-listview tbody tr td span.ddp-sub-name {color:#4b525b; font-size:13px; font-weight:300;}
table.ddp-table-listview tbody tr:nth-child(odd) td {background-color:#fafafa;}

table.ddp-table-listview tbody tr td span.ddp-box-tag-value {display:inline-block; padding:2px 3px; border-radius:2px;  font-size:12px;}
table.ddp-table-listview tbody tr td span.ddp-box-tag-value.ddp-dimension {width:70px; border:1px solid #439fe5; text-align:center; color:#439fe5; box-sizing:border-box;}
table.ddp-table-listview tbody tr td span.ddp-box-tag-value.ddp-measure {width:70px; border:1px solid #5fd7a5;text-align:center;  color:#5fd7a5; box-sizing:border-box;}
table.ddp-table-listview tbody tr td em[class*="ddp-icon-type-"] {position:relative; left:0; top:0; margin:0;}

/**************************************************************
	매니지먼트 모니터링 리스트
**************************************************************/
.ddp-fix-size {position:relative; height:246px; box-sizing:border-box;}
.ddp-fix-size .ddp-nodata {display:table; width:100%; height:215px; padding:90px 0 0 0; text-align:center; background-color:#fff;  font-size:18px; color:#d0d1db; border:1px solid #ddd; border-top:none; box-sizing:border-box;}

/**************************************************************
	매니지먼트 메타데이터 상세
**************************************************************/
.ddp-ui-preview-contents table.ddp-table-form.ddp-table-details tbody tr:nth-child(odd) td.ddp-disabled:hover {background-color:#fafafa !important;}
table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons {float:right;}
table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons .ddp-wrap-hover-info {float:left; padding:5px 0 0 0; font-size:0px;}

table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons [class*="ddp-icon-array"] {top:0;}

/**************************************************************
	Table tooltip
**************************************************************/
table tbody tr td .ddp-txt-long:hover + .ddp-ui-tooltip-info {display:block; top:100%; left:0; min-width:50px;max-width:100%; white-space:normal; box-sizing:border-box;}
table tbody tr td .ddp-txt-long:hover + .ddp-ui-tooltip-info .ddp-icon-view-top {left:40px;}

table tbody tr > td .ddp-hover-tooltip:hover + .ddp-ui-tooltip-info {display:block; top:100%; left:-10px; min-width:50px; max-width:100%; white-space:normal; box-sizing:border-box;}
table tbody tr > td .ddp-hover-tooltip:hover + .ddp-ui-tooltip-info em.ddp-icon-view-top {left:40px; }
/* ... */

